<resources>
    <string name="app_name">EcoPesa</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">EcoPesa</string>
    <string name="nav_header_subtitle">La Materia y sus Interacciones</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_medir">Mi EcoPesa</string>
    <string name="menu_informacion">Información</string>
    <string name="buscar">Buscar</string>
    <string name="menu_mis_ecopesas">Mis EcoPesas</string>
    <string name="rename">Renombrar</string>
    <string name="delete">Eliminar</string>
    <string name="device_name_hint">Nombre del dispositivo</string>
    <string name="medir">Medir</string>
    <string name="guardar">Guardar</string>
    <string name="factor_hint">Factor</string>
    <string name="reset_factory">Resetar a Fabrica</string>
</resources>