<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mis_ecopesas">

    <fragment
        android:id="@+id/nav_mis_ecopesas"
        android:name="com.example.ecopesa.ui.misecopesas.MisEcoPesasFragment"
        android:label="@string/menu_mis_ecopesas"
        tools:layout="@layout/fragment_mis_ecopesas" />

    <fragment
        android:id="@+id/nav_medir"
        android:name="com.example.ecopesa.ui.medir.MedirFragment"
        android:label="@string/menu_medir"
        tools:layout="@layout/fragment_medir" />

    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.ecopesa.ui.informacion.InformacionFragment"
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.ecopesa.ui.configuracion.ConfiguracionFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_configuracion" />

</navigation>