<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editarFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/factor_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/botonGuardarFactor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/botonResetear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_factory"
        android:layout_marginTop="8dp" />

</LinearLayout>
